--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.15",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15"
   }
 }
