--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "tcat-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for progress",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  },
+  "author": "Norbu Sonam",
+  "license": "MIT",
   "dependencies": {
-    "cookie-parser": "^1.4.5",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.11.13",
+    "nodemon": "^2.0.7"
   }
 }
